# server-doctor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_CONTEXT.md  README.md  SECURITY.md  check_servers.py  debug_report_gen.py  dev.cmd  dev.ps1  fix_password.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: architecture.md
src/server_doctor/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/server_doctor/actions/: __init__.py  apply.py  cicd_formatter.py  fix_pack.py  generate.py  html_report.py  html_report_enhancements.py  report.py  report_bundle.py  safe_fix.py
src/server_doctor/ai/: __init__.py  diagnoser.py
src/server_doctor/analyzer/: __init__.py  api_surface_auditor.py  (+38 more)
tests/: conftest.py  test_accepted_risk_baseline.py  test_backup_auditor.py  test_backup_readiness_auditor.py  test_backup_readiness_scanner.py  test_blast_radius.py  test_certbot_auditor.py  test_cli_flags.py  test_cli_pipeline_consistency.py  test_correlation_logic.py  test_correlations_storage.py  test_daemon_monitor.py  test_database_auditor.py  test_deduplication.py  test_dependency_posture_auditor.py  test_diagnoser.py  test_dns_tls_auditor.py  test_dns_tls_scanner.py  test_drift_engine.py  test_finding_fingerprint.py  test_finding_lifecycle_repository.py  test_firewall_recommendation.py  test_firewall_scanner.py  test_fix_pack.py  test_fix_plan_api.py  test_fix_validation.py  test_fix_validation_lifecycle.py  test_history_trend.py  test_html_report_action.py  test_http_probe_auditor.py  test_http_probe_scanner.py  test_infrastructure_auditors.py  test_job_runner.py  test_job_runner_findings.py  test_laravel.py  test_laravel_production_auditor.py  test_laravel_runtime_auditor.py  test_laravel_runtime_scanner.py  test_mysql_deep_auditor.py  test_mysql_deep_scanner.py  (+56 more)
tests/test_parser/: __init__.py  test_server_conf.py
web-ui/: package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  index.css  router.tsx
(+186 files in other folders)
